<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.InsertBiodataActivity">

    <ProgressBar
        android:id="@+id/progress_insert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/lines_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/insert_images"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/user"/>
        <EditText
            android:id="@+id/edt_nim_insert"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:background="@drawable/rounder_background_edit"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/nim_lengkap"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
        <EditText
            android:id="@+id/edt_nama_insert"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:background="@drawable/rounder_background_edit"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/nama_lengkap"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
        <EditText
            android:id="@+id/edt_phone_insert"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="phone"
            android:background="@drawable/rounder_background_edit"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/phone"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
        <EditText
            android:id="@+id/edt_email_insert"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounder_background_edit"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
        <EditText
            android:id="@+id/edt_dob_insert"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="postalAddress"
            android:background="@drawable/rounder_background_edit"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/dob"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
        <EditText
            android:id="@+id/edt_address_insert"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="postalAddress"
            android:background="@drawable/rounder_background_edit"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/address"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
        <Button
            android:id="@+id/btn_simpan_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/simpan"
            android:textSize="25sp"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>