<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DetailsActivity">

    <ProgressBar
        android:id="@+id/progress_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
  <LinearLayout
      android:id="@+id/lines_details"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <ImageView
          android:id="@+id/img_back_rows"
          android:layout_width="60dp"
          android:layout_height="25dp"
          android:layout_marginTop="5dp"
          android:layout_marginStart="5dp"
          android:layout_marginEnd="5dp"
          android:src="@drawable/arrow"/>
      <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/detail_images"
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:src="@drawable/user"/>
      <TextView
          android:id="@+id/edt_nim_detail"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:autofillHints="name"
          android:background="@drawable/rounder_background_edit"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_marginTop="10dp"
          android:hint="@string/nim_lengkap"
          android:gravity="center"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:textColorHint="@color/black" />
      <TextView
          android:id="@+id/edt_nama_detail"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:autofillHints="name"
          android:background="@drawable/rounder_background_edit"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_marginTop="10dp"
          android:hint="@string/nama_lengkap"
          android:gravity="center"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:textColorHint="@color/black" />
      <TextView
          android:id="@+id/edt_phone_detail"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:autofillHints="phone"
          android:background="@drawable/rounder_background_edit"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_marginTop="10dp"
          android:hint="@string/phone"
          android:gravity="center"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:textColorHint="@color/black" />
      <TextView
          android:id="@+id/edt_email_detail"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:autofillHints="emailAddress"
          android:background="@drawable/rounder_background_edit"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_marginTop="10dp"
          android:hint="@string/email"
          android:gravity="center"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:textColorHint="@color/black" />
      <TextView
          android:id="@+id/edt_dob_detail"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:autofillHints="postalAddress"
          android:background="@drawable/rounder_background_edit"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_marginTop="10dp"
          android:hint="@string/dob"
          android:gravity="center"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:textColorHint="@color/black" />
      <TextView
          android:id="@+id/edt_address_detail"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:background="@drawable/rounder_background_edit"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_marginTop="10dp"
          android:hint="@string/address"
          android:gravity="center"
          android:textSize="20sp"
          android:textColor="@color/black"
          android:textColorHint="@color/black" />
  </LinearLayout>
</LinearLayout>