<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

   <androidx.cardview.widget.CardView
       android:id="@+id/card_item_klik"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="25dp"
       app:cardElevation="16dp"
       app:cardPreventCornerOverlap="true"
       app:cardUseCompatPadding="true"
       app:contentPadding="@dimen/cardview_default_elevation">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <de.hdodenhof.circleimageview.CircleImageView
               android:id="@+id/item_images_data"
               android:layout_width="125dp"
               android:layout_height="125dp"
               android:src="@drawable/user"
               android:layout_marginBottom="20dp"
               android:layout_gravity="center"
               android:layout_marginTop="15dp"
               android:layout_marginStart="15dp"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_marginEnd="10dp"
               android:layout_gravity="center"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="15dp"
               android:layout_marginStart="10dp">
               <TextView
                   android:id="@+id/item_nim_data"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/nim_lengkap"
                   android:textSize="20sp"
                   android:textColor="@color/black"
                   android:textStyle="bold"/>
               <TextView
                   android:id="@+id/item_nama_data"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/nama_lengkap"
                   android:layout_marginTop="15dp"
                   android:textSize="20sp"
                   android:textColor="@color/black"
                   android:textStyle="bold"/>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_marginBottom="10dp"
                   android:layout_marginStart="10dp"
                   android:layout_marginEnd="10dp">
                   <Button
                       android:id="@+id/btn_detail_item"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/details"
                       android:textSize="15sp"
                       android:layout_weight="1"
                       android:textAllCaps="false"/>
                   <Button
                       android:id="@+id/btn_upddel_item"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/update"
                       android:layout_weight="1"
                       android:textAllCaps="false"
                       android:layout_marginStart="10dp"/>
               </LinearLayout>
           </LinearLayout>
       </LinearLayout>


   </androidx.cardview.widget.CardView>

</LinearLayout>